name:                servant-pcf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-sqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Api
                       Api.Requests
                       Persist.Models
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , persistent-template
                     , aeson
                     , persistent
                     , resource-pool
                     , servant-server
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable servant-pcf
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude >= 0.1.6 && < 0.2
                     , servant-server
                     , warp
                     , persistent-sqlite
                     , time
                     , wai-logger
                     , resource-pool
                     , monad-control
                     , exceptions
                     , transformers-base
                     , monad-logger
                     , servant-pcf
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite servant-sqlite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-sqlite
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-sqlite
